@@ -69,7 +69,7 @@
 		</area>
 	</colorbuttons>
 
-	<timers detached="true" delay="100" fadetime="500" >
+	<timers detached="true" delay="{timersDelay}" fadetime="{timersFadetime}" >
 		<area x="0" y="74%" width="45%" height="6%" layer="3">
 			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsTimersHeader" />
 		</area>
@@ -105,7 +105,7 @@
 		</area>
 	</timers>
 	<!--<lastrecordings condition="lt({numtimers}, 4)++{showTimersRecordingsandInfos}" detached="true" delay="100" fadetime="500">-->
-	<lastrecordings detached="true" delay="100" fadetime="500">
+	<lastrecordings detached="true" delay="{lastrecordingsDelay}" fadetime="{lastrecordingsFadetime}">
 		<area x="45%" y="74%" width="33%" height="6%" layer="3">
 			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsLastTimersHeader" />
 		</area>
@@ -113,7 +113,7 @@
 			<drawtext align="center" y="15%" font="{light}" fontsize="70%" color="{clrLightGray}" text="{tr(lastrecordings)}" />
 		</area>
 		<area x="45%" y="80%" width="33%" height="18%" layer="3">
-			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/5" rowheight="{areaheight}" overflow="cut">
+			<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/3" rowheight="{areaheight}" overflow="cut">
 				<drawimage x="0" y="0" width="{columnwidth}" height="{rowheight}" imagetype="skinpart" path="shadowsTimerMain" />
 				<drawtext x="4%" y="10%" width="{columnwidth}*0.8" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
 				<drawtextbox x="2%" y="40%" width="{columnwidth}*0.8" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[name]}" /> 
@@ -121,13 +121,13 @@
 		</area>
 	</lastrecordings>
 
-	<discusage detached="true" delay="150" fadetime="500">
+	<discusage detached="true" delay="{discusageDelay}" fadetime="{dicusageFadetime}">
 		<area x="75%" y="67%" width="20%" height="6%" layer="3">
 			<drawtext x="0" y="0" align="right" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{vdrusagestring}" />
 		</area>
 	</discusage>
 
-	<devices detached="true" delay="300" fadetime="500">
+	<devices detached="true" delay="{devicesDelay}" fadetime="{devicesFadetime}">
 		<area x="80%" y="74%" width="16%" height="12%" layer="3">
 			<loop name="devices" x="0" y="3%" orientation="vertical" columnwidth="{areawidth}" rowheight="{areaheight}/2" overflow="cut">
 				<drawtext name="label" x="5" y="{areaheight}*0.04" font="{light}" fontsize="{rowheight}*0.4" color="{clrLightGray}" text="{devices[num]}: {devices[type]}" />
@@ -141,7 +141,7 @@
 		</area> 
 	</devices>
 
-	<currentweather detached="true" delay="200" fadetime="500" >
+	<currentweather detached="true" delay="{currentweatherDelay}" fadetime="{currentweatherFadetime}" >
 		<area x="80%" y="92%" width="8%" height="6%" layer="3">
 			<drawimage name="weathericon" x="0" valign="center" width="{areaheight}*0.8" height="{areaheight}*0.8" imagetype="icon" path="{icon}" />
 			<drawtext name="temperature" x="0" align="right" valign="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="{temperature}°C" />
@@ -152,7 +152,7 @@
 		</area>
 	</currentweather>
 
-	<systemload detached="true" delay="200" fadetime="500" >
+	<systemload detached="true" delay="{systemloadDelay}" fadetime="{systemloadFadetime}500" >
 		<area x="79%" y="74%" width="21%" height="26%" layer="3">
 			<drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsInfoMainLast" />
 		</area>
@@ -161,7 +161,7 @@
 		</area>-->
 	</systemload>
 	
-	<temperatures detached="true" delay="200" fadetime="500" >
+	<temperatures detached="true" delay="{temperaturesDelay}" fadetime="{temperaturesFadetime}" >
 		<area x="80%" y="86%" width="16%" height="6%" layer="3">		
 			<drawtext x="0" valign="center" font="{light}" fontsize="50%" color="{clrLightGray}" text="CPU: {cputemp}°C        GPU: {gputemp}°C"/>
 		</area>
