@@ -41,5 +41,6 @@ shady-skin Revision History
 - Fixed scrollbars
 - Fixed heights in weatherforecast
 - Enhanced postion of setupiconbar
+- Added setup for delay and fadetimes
 
 
